// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Text renders disabled 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        disabled={true}
        placeholder=" "
        type="text"
        value="Text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 ftPOyc"
      disabled={true}
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          disabled={true}
          placeholder=" "
          type="text"
          value="Text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders error 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 fCNdsc"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 hiJSVK"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 liUDyj"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 gliQQD"
        role="alert"
      >
        Error message
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders readOnly 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder=" "
        readOnly={true}
        type="text"
        value="Read only text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder=" "
          readOnly={true}
          type="text"
          value="Read only text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with hint 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders with label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="Placeholder"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text renders without label 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <input
        className="Input-qkdgvx-0 dInVWZ"
        placeholder="xsmall"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <input
        className="Input-qkdgvx-0 grZGSz"
        placeholder="small"
        type="text"
      />
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 bMgBMq"
      >
        <input
          className="Input-qkdgvx-0 iZYQRx"
          placeholder="medium"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Text supports background colour 1`] = `
<div
  className="flex gap-4 items-end"
>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        xsmall
      </label>
      <input
        className="Input-qkdgvx-0 bVigKL"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <label
        className="Label-sc-1rdea5p-0 irIYEK"
      >
        small
      </label>
      <input
        className="Input-qkdgvx-0 eRgNAh"
        placeholder="Placeholder"
        type="text"
      />
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
  <div
    className="m-4"
  >
    <div
      className="Container-sc-1f49upb-0 iPTTwu"
    >
      <div
        className="Inner-sc-1soq84i-0 dKhopI"
      >
        <input
          className="Input-qkdgvx-0 crVbWq"
          placeholder="Placeholder"
          type="text"
        />
        <label
          className="LabelInner-vrrjt0-0 bMijKN"
        >
          medium
        </label>
      </div>
      <p
        className="HintText-sc-1e9hzxr-0 jqaInz"
        role="alert"
      >
        Informative message holder
      </p>
    </div>
  </div>
</div>
`;
